testsuite/tests/properties/invalid_cast/correct.lkt
import common

class ListNode: FooNode {
    @parse_field nb_list: ASTList[FooNode, NumberNode]

    @exported fun prop(): BarNode = node.parent.as[BarNode]
}
